--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SkillUp - Master Essential Soft Skills for Career Success</title>
+    <title>Tera - Teacher Education for Responsive Adaptive learning</title>
     <meta name="description" content="Interactive learning platform for students to master communication, teamwork, problem-solving, and time management through gamified modules and community support." />
     <meta name="author" content="SkillUp" />
 
-    <meta property="og:title" content="SkillUp - Upskilling Soft Skills Platform" />
+    <meta property="og:title" content="Tera - Teacher Education for Responsive Adaptive learning" />
     <meta property="og:description" content="Join thousands of students mastering essential soft skills through interactive learning, gamification, and community engagement." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
